Refactor all the execution and disassembler code
* A struct named Instruction is used to clean up a lot of repeated mess
  when getting bits of data in the instruction
* All the conditional branching has been changed to encourage better
  performance and compiler+JIT optimizations
* Wrote a new assembler dialect that has better symmetry with current
  popular assembly languages and can be interpreted by a machine assembler
  without ambiguity

--- a/CHIP-8/CHIP-8.csproj
+++ b/CHIP-8/CHIP-8.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Chip8.cs" />
     <Compile Include="Disassembler.cs" />
+    <Compile Include="Instruction.cs" />
     <Compile Include="Keyboard.cs" />
     <Compile Include="Sound.cs" />
     <Compile Include="WinApi.cs" />
